# frc-ros

./: .gitignore  LICENSE  Makefile  README.md  docker.sh  drivers.humble.repos  example.env  frc.ros.humble.repos  jetson.humble.repos  source_ros2.sh
.docker_utils/: Dockerfile.arm
.github/workflows/: ci.yaml  publish_arm.yml
repos/: lidar.repos
src/common/base_common/: CMakeLists.txt  package.xml  setup.cfg
src/common/base_common/include/base_common/: low_pass_filter.hpp
src/common/base_common/src/: dummy.cpp
src/common/common_metadata/: CMakeLists.txt  package.xml
src/common/transform_helper/: CMakeLists.txt  package.xml
src/common/transform_helper/src/: transform_helper.cpp
src/launch/autonomy_launch/: CMakeLists.txt  package.xml
src/launch/autonomy_launch/launch/: autonomy_all.launch.py  autonomy_core.launch.py  localization.launch.py  misc.launch.py  perception.launch.py
src/launch/basestation_launch/: CMakeLists.txt  package.xml
src/launch/basestation_launch/launch/: basestation.launch.py  sim.launch.py  urdf_publisher_launch.launch.py
src/launch/basestation_launch/param/: car_config.yaml
src/launch/frc_launch/: CMakeLists.txt  package.xml
src/launch/frc_launch/launch/: frc.launch.py
src/launch/frc_launch/param/: uuids.json
src/launch/frc_launch/param/kit_bot/: frc.param.yaml
src/launch/sensor_launch/: package.xml  setup.cfg  setup.py
src/launch/stack_launch/: CMakeLists.txt  package.xml
src/launch/tools_launch/: CMakeLists.txt  package.xml
src/launch/tools_launch/launch/: tools.launch.py
src/localization/state_estimation/: setup.py
src/nt_comm/nt_client/: README.md  package.xml  setup.cfg  setup.py
src/perception/sensors/: setup.py
src/tools/startup_services/: CMakeLists.txt  README.md  package.xml  setup.bash
src/tools/startup_services/launch/: autonomy.bash  base_source.bash  cameras_iac.bash  docker.bash  lidar_perception.bash  raptor.bash
src/tools/startup_services/services/: autonomy.service  cameras_iac.service  frc-ros_docker.service
tools/cuda/: cuda_version_tools.sh
tools/cyclone_dds_configs/: cyclonedds_zenoh.xml
tools/image/: Dockerfile  Dockerfile.built  apt-packages  apt-packages-gpu-cu118  apt-packages-gpu-cu122  apt-packages-jetson  apt-packages-l4t  custom-installs-jetson.sh  custom-installs-jp6.sh  custom-installs-l4t.sh  custom-installs.sh  exports-gpu-cu118.sh  exports-gpu-cu122.sh  exports-humble.sh  exports-jetson.sh  exports.sh  external_race_env.sh  pip3-packages  pip3-packages-gpu-cu118  pip3-packages-gpu-cu122  pip3-packages-jetson  pip3-packages-jetson-gpu  pytorch-gpu-jetson  ros-install.sh  ros-jetson-install.sh  skip-keys  vcs-imports-humble-jetson.sh  vcs-imports-humble.sh  vcs-imports-iron-jetson.sh  vcs-imports-iron.sh
tools/ros2bag_to_csv/: .gitignore  README.md  ros2bag_parser.py  ros2bag_to_csv.py  ros2bag_to_csv_folder.py
tools/ros2bag_to_csv/handlers/: __init__.py  handle_compressed_img.py  handle_pose.py  handle_pose_with_covariance.py  handle_quaternion.py  handle_stamp.py  handle_vector3.py
tools/scripts/: autonomous_params.sh  compression_utility.py  create_bt_nodes.py  docker.sh  filter_rosbag.py  kill_ros2_nodes.sh  source_all.sh
tools/scripts/logging/: README.md  log_all.sh  log_lidarspcap.sh  log_radarcan.sh
tools/system_monitor_misc/: update_config.py
tools/tmux_configs/: autonoma.yaml  basestation.yaml  car.yaml  iac_car.yaml  iac_perception_sensors.yaml  iac_perception_stack.yaml  svl_iac_docker.yaml
tools/zenoh_configs/cyclone_uri_config/: cyclonedds.xml
tools/zenoh_configs/iac_car/: basestation.json5  dspace.json5
(+29 files in other folders)
